crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_arguments_in_new_expr.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void test() {
        List<String> l = new ArrayList<>();
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
IDENTIFIER "List"
LESS "<"
IDENTIFIER "String"
GREATER ">"
WHITESPACE " "
IDENTIFIER "l"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
NEW_KW "new"
WHITESPACE " "
IDENTIFIER "ArrayList"
LESS "<"
GREATER ">"
L_PAREN "("
R_PAREN ")"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..83
  CLASS_DECL@0..82
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..82
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..80
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "test"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..80
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          LOCAL_VARIABLE_DECLARATION_STMT@39..74
            LOCAL_VARIABLE_DECLARATION@39..73
              TYPE@39..51
                QUALIFIED_NAME@39..43
                  IDENTIFIER@39..43 "List"
                TYPE_ARGUMENTS@43..51
                  LESS@43..44 "<"
                  TYPE_ARGUMENT@44..50
                    TYPE@44..50
                      QUALIFIED_NAME@44..50
                        IDENTIFIER@44..50 "String"
                  GREATER@50..51 ">"
              WHITESPACE@51..52 " "
              VARIABLE_DECLARATOR_LIST@52..73
                VARIABLE_DECLARATOR@52..73
                  IDENTIFIER@52..53 "l"
                  WHITESPACE@53..54 " "
                  EQUAL@54..55 "="
                  WHITESPACE@55..56 " "
                  NEW_EXPR@56..73
                    NEW_KW@56..59 "new"
                    WHITESPACE@59..60 " "
                    QUALIFIED_NAME@60..69
                      IDENTIFIER@60..69 "ArrayList"
                    TYPE_ARGUMENTS@69..71
                      LESS@69..70 "<"
                      GREATER@70..71 ">"
                    ARGUMENT_LIST@71..73
                      L_PAREN@71..72 "("
                      R_PAREN@72..73 ")"
            SEMICOLON@73..74 ";"
          WHITESPACE@74..79 "\n    "
          R_BRACE@79..80 "}"
      WHITESPACE@80..81 "\n"
      R_BRACE@81..82 "}"
  WHITESPACE@82..83 "\n"
