crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_cast_expr.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test {
    void test() {
        Integer i = (Integer)1;
        boolean b = (boolean)1;
    }
}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "test"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n        "
IDENTIFIER "Integer"
WHITESPACE " "
IDENTIFIER "i"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
L_PAREN "("
IDENTIFIER "Integer"
R_PAREN ")"
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n        "
BOOLEAN_KW "boolean"
WHITESPACE " "
IDENTIFIER "b"
WHITESPACE " "
EQUAL "="
WHITESPACE " "
L_PAREN "("
BOOLEAN_KW "boolean"
R_PAREN ")"
INTEGER_LITERAL "1"
SEMICOLON ";"
WHITESPACE "\n    "
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..103
  CLASS_DECL@0..102
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..102
      L_BRACE@11..12 "{"
      WHITESPACE@12..17 "\n    "
      METHOD_DECL@17..100
        VOID_KW@17..21 "void"
        WHITESPACE@21..22 " "
        IDENTIFIER@22..26 "test"
        FORMAL_PARAMETERS@26..28
          L_PAREN@26..27 "("
          R_PAREN@27..28 ")"
        WHITESPACE@28..29 " "
        BLOCK@29..100
          L_BRACE@29..30 "{"
          WHITESPACE@30..39 "\n        "
          LOCAL_VARIABLE_DECLARATION_STMT@39..62
            LOCAL_VARIABLE_DECLARATION@39..61
              TYPE@39..46
                QUALIFIED_NAME@39..46
                  IDENTIFIER@39..46 "Integer"
              WHITESPACE@46..47 " "
              VARIABLE_DECLARATOR_LIST@47..61
                VARIABLE_DECLARATOR@47..61
                  IDENTIFIER@47..48 "i"
                  WHITESPACE@48..49 " "
                  EQUAL@49..50 "="
                  WHITESPACE@50..51 " "
                  CAST_EXPR@51..61
                    L_PAREN@51..52 "("
                    TYPE@52..59
                      QUALIFIED_NAME@52..59
                        IDENTIFIER@52..59 "Integer"
                    R_PAREN@59..60 ")"
                    LITERAL@60..61
                      INTEGER_LITERAL@60..61 "1"
            SEMICOLON@61..62 ";"
          WHITESPACE@62..71 "\n        "
          LOCAL_VARIABLE_DECLARATION_STMT@71..94
            LOCAL_VARIABLE_DECLARATION@71..93
              TYPE@71..78
                BOOLEAN_KW@71..78 "boolean"
              WHITESPACE@78..79 " "
              VARIABLE_DECLARATOR_LIST@79..93
                VARIABLE_DECLARATOR@79..93
                  IDENTIFIER@79..80 "b"
                  WHITESPACE@80..81 " "
                  EQUAL@81..82 "="
                  WHITESPACE@82..83 " "
                  CAST_EXPR@83..93
                    L_PAREN@83..84 "("
                    TYPE@84..91
                      BOOLEAN_KW@84..91 "boolean"
                    R_PAREN@91..92 ")"
                    LITERAL@92..93
                      INTEGER_LITERAL@92..93 "1"
            SEMICOLON@93..94 ";"
          WHITESPACE@94..99 "\n    "
          R_BRACE@99..100 "}"
      WHITESPACE@100..101 "\n"
      R_BRACE@101..102 "}"
  WHITESPACE@102..103 "\n"
