crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_parameters_class.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A<T> {}
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
LESS "<"
IDENTIFIER "T"
GREATER ">"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..13
  CLASS_DECL@0..13
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    TYPE_PARAMETERS@7..10
      LESS@7..8 "<"
      TYPE_PARAMETER@8..9
        IDENTIFIER@8..9 "T"
      GREATER@9..10 ">"
    WHITESPACE@10..11 " "
    CLASS_BODY@11..13
      L_BRACE@11..12 "{"
      R_BRACE@12..13 "}"
