crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_parameters_generic_constructor.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { <T> A() {} }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
LESS "<"
IDENTIFIER "T"
GREATER ">"
WHITESPACE " "
IDENTIFIER "A"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..22
  CLASS_DECL@0..22
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..22
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      CONSTRUCTOR_DECL@10..20
        TYPE_PARAMETERS@10..13
          LESS@10..11 "<"
          TYPE_PARAMETER@11..12
            IDENTIFIER@11..12 "T"
          GREATER@12..13 ">"
        WHITESPACE@13..14 " "
        IDENTIFIER@14..15 "A"
        FORMAL_PARAMETERS@15..17
          L_PAREN@15..16 "("
          R_PAREN@16..17 ")"
        WHITESPACE@17..18 " "
        BLOCK@18..20
          L_BRACE@18..19 "{"
          R_BRACE@19..20 "}"
      WHITESPACE@20..21 " "
      R_BRACE@21..22 "}"
