crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_parameters_in_extends_and_implements_clauses.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class Test<T> extends A<T> implements B<T>, C {
    void func() throws Exception {}
}

interface C<T> extends B<T> {}

TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "Test"
LESS "<"
IDENTIFIER "T"
GREATER ">"
WHITESPACE " "
EXTENDS_KW "extends"
WHITESPACE " "
IDENTIFIER "A"
LESS "<"
IDENTIFIER "T"
GREATER ">"
WHITESPACE " "
IMPLEMENTS_KW "implements"
WHITESPACE " "
IDENTIFIER "B"
LESS "<"
IDENTIFIER "T"
GREATER ">"
COMMA ","
WHITESPACE " "
IDENTIFIER "C"
WHITESPACE " "
L_BRACE "{"
WHITESPACE "\n    "
VOID_KW "void"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
THROWS_KW "throws"
WHITESPACE " "
IDENTIFIER "Exception"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n"
R_BRACE "}"
WHITESPACE "\n\n"
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "C"
LESS "<"
IDENTIFIER "T"
GREATER ">"
WHITESPACE " "
EXTENDS_KW "extends"
WHITESPACE " "
IDENTIFIER "B"
LESS "<"
IDENTIFIER "T"
GREATER ">"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE "\n"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..118
  CLASS_DECL@0..85
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..10 "Test"
    TYPE_PARAMETERS@10..13
      LESS@10..11 "<"
      TYPE_PARAMETER@11..12
        IDENTIFIER@11..12 "T"
      GREATER@12..13 ">"
    WHITESPACE@13..14 " "
    EXTENDS_CLAUSE@14..26
      EXTENDS_KW@14..21 "extends"
      WHITESPACE@21..22 " "
      TYPE@22..26
        QUALIFIED_NAME@22..23
          IDENTIFIER@22..23 "A"
        TYPE_ARGUMENTS@23..26
          LESS@23..24 "<"
          TYPE_ARGUMENT@24..25
            TYPE@24..25
              QUALIFIED_NAME@24..25
                IDENTIFIER@24..25 "T"
          GREATER@25..26 ">"
    WHITESPACE@26..27 " "
    IMPLEMENTS_CLAUSE@27..45
      IMPLEMENTS_KW@27..37 "implements"
      WHITESPACE@37..38 " "
      TYPE@38..42
        QUALIFIED_NAME@38..39
          IDENTIFIER@38..39 "B"
        TYPE_ARGUMENTS@39..42
          LESS@39..40 "<"
          TYPE_ARGUMENT@40..41
            TYPE@40..41
              QUALIFIED_NAME@40..41
                IDENTIFIER@40..41 "T"
          GREATER@41..42 ">"
      COMMA@42..43 ","
      WHITESPACE@43..44 " "
      TYPE@44..45
        QUALIFIED_NAME@44..45
          IDENTIFIER@44..45 "C"
    WHITESPACE@45..46 " "
    CLASS_BODY@46..85
      L_BRACE@46..47 "{"
      WHITESPACE@47..52 "\n    "
      METHOD_DECL@52..83
        VOID_KW@52..56 "void"
        WHITESPACE@56..57 " "
        IDENTIFIER@57..61 "func"
        FORMAL_PARAMETERS@61..63
          L_PAREN@61..62 "("
          R_PAREN@62..63 ")"
        WHITESPACE@63..64 " "
        THROWS_CLAUSE@64..80
          THROWS_KW@64..70 "throws"
          WHITESPACE@70..71 " "
          TYPE@71..80
            QUALIFIED_NAME@71..80
              IDENTIFIER@71..80 "Exception"
        WHITESPACE@80..81 " "
        BLOCK@81..83
          L_BRACE@81..82 "{"
          R_BRACE@82..83 "}"
      WHITESPACE@83..84 "\n"
      R_BRACE@84..85 "}"
  WHITESPACE@85..87 "\n\n"
  INTERFACE_DECL@87..117
    INTERFACE_KW@87..96 "interface"
    WHITESPACE@96..97 " "
    IDENTIFIER@97..98 "C"
    TYPE_PARAMETERS@98..101
      LESS@98..99 "<"
      TYPE_PARAMETER@99..100
        IDENTIFIER@99..100 "T"
      GREATER@100..101 ">"
    WHITESPACE@101..102 " "
    INTERFACE_EXTENDS_CLAUSE@102..114
      EXTENDS_KW@102..109 "extends"
      WHITESPACE@109..110 " "
      TYPE@110..114
        QUALIFIED_NAME@110..111
          IDENTIFIER@110..111 "B"
        TYPE_ARGUMENTS@111..114
          LESS@111..112 "<"
          TYPE_ARGUMENT@112..113
            TYPE@112..113
              QUALIFIED_NAME@112..113
                IDENTIFIER@112..113 "T"
          GREATER@113..114 ">"
    WHITESPACE@114..115 " "
    INTERFACE_BODY@115..117
      L_BRACE@115..116 "{"
      R_BRACE@116..117 "}"
  WHITESPACE@117..118 "\n"
