crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_parameters_method_interface.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
interface A { <T> T func(); }
TOKENS:
INTERFACE_KW "interface"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
LESS "<"
IDENTIFIER "T"
GREATER ">"
WHITESPACE " "
IDENTIFIER "T"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
SEMICOLON ";"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..29
  INTERFACE_DECL@0..29
    INTERFACE_KW@0..9 "interface"
    WHITESPACE@9..10 " "
    IDENTIFIER@10..11 "A"
    WHITESPACE@11..12 " "
    INTERFACE_BODY@12..29
      L_BRACE@12..13 "{"
      WHITESPACE@13..14 " "
      METHOD_DECL@14..27
        TYPE_PARAMETERS@14..17
          LESS@14..15 "<"
          TYPE_PARAMETER@15..16
            IDENTIFIER@15..16 "T"
          GREATER@16..17 ">"
        WHITESPACE@17..18 " "
        TYPE@18..19
          QUALIFIED_NAME@18..19
            IDENTIFIER@18..19 "T"
        WHITESPACE@19..20 " "
        IDENTIFIER@20..24 "func"
        FORMAL_PARAMETERS@24..26
          L_PAREN@24..25 "("
          R_PAREN@25..26 ")"
        SEMICOLON@26..27 ";"
      WHITESPACE@27..28 " "
      R_BRACE@28..29 "}"
