crates/java-syntax/tests/snapshots/parser_snapshots__parse_type_parameters_method_typed_return.snap
---
source: crates/java-syntax/tests/parser_snapshots.rs
expression: out
---
SOURCE:
class A { <T> T func() {} }
TOKENS:
CLASS_KW "class"
WHITESPACE " "
IDENTIFIER "A"
WHITESPACE " "
L_BRACE "{"
WHITESPACE " "
LESS "<"
IDENTIFIER "T"
GREATER ">"
WHITESPACE " "
IDENTIFIER "T"
WHITESPACE " "
IDENTIFIER "func"
L_PAREN "("
R_PAREN ")"
WHITESPACE " "
L_BRACE "{"
R_BRACE "}"
WHITESPACE " "
R_BRACE "}"
EOF ""

LEX_ERRORS:
<none>

SYNTAX_TREE:
ROOT@0..27
  CLASS_DECL@0..27
    CLASS_KW@0..5 "class"
    WHITESPACE@5..6 " "
    IDENTIFIER@6..7 "A"
    WHITESPACE@7..8 " "
    CLASS_BODY@8..27
      L_BRACE@8..9 "{"
      WHITESPACE@9..10 " "
      METHOD_DECL@10..25
        TYPE_PARAMETERS@10..13
          LESS@10..11 "<"
          TYPE_PARAMETER@11..12
            IDENTIFIER@11..12 "T"
          GREATER@12..13 ">"
        WHITESPACE@13..14 " "
        TYPE@14..15
          QUALIFIED_NAME@14..15
            IDENTIFIER@14..15 "T"
        WHITESPACE@15..16 " "
        IDENTIFIER@16..20 "func"
        FORMAL_PARAMETERS@20..22
          L_PAREN@20..21 "("
          R_PAREN@21..22 ")"
        WHITESPACE@22..23 " "
        BLOCK@23..25
          L_BRACE@23..24 "{"
          R_BRACE@24..25 "}"
      WHITESPACE@25..26 " "
      R_BRACE@26..27 "}"
